行政訴訟法 2011.11.1

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -4,17 +4,27 @@
 
 * 3 前條所稱之行政訴訟，指撤銷訴訟、確認訴訟及給付訴訟。
 
-* 4 人民因中央或地方機關之違法行政處分，認為損害其權利或法律上之利益，經依訴願法提起訴願而不服其決定，或提起訴願逾三個月不為決定，或延長訴願決定期間逾二個月不為決定者，得向高等行政法院提起撤銷訴訟。逾越權限或濫用權力之行政處分，以違法論。訴願人以外之利害關係人，認為第一項訴願決定，損害其權利或法律上之利益者，得向高等行政法院提起撤銷訴訟。
+* 3.1 辦理行政訴訟之地方法院行政訴訟庭，亦為本法所稱之行政法院。
 
-* 5 人民因中央或地方機關對其依法申請之案件，於法令所定期間內應作為而不作為，認為其權利或法律上利益受損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。人民因中央或地方機關對其依法申請之案件，予以駁回，認為其權利或法律上利益受違法損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。
+> 釋：一、本條新增。二、行政訴訟將改採三級二審，在地方法院設置行政訴訟庭。依簡易訴訟程序、交通裁決事件訴訟程序提起訴訟者，係向地方法院行政訴訟庭為之；依通常訴訟程序提起訴訟者，係向高等行政法院為之（以下簡稱最新制）。爰增訂本條，明定地方法院行政訴訟庭於辦理行政訴訟事件時，亦為本法所稱之行政法院。至於高等行政法院、最高行政法院當然屬於本法所稱之行政法院，自不待言。
 
-* 6 確認行政處分無效及確認公法上法律關係成立或不成立之訴訟，非原告有即受確認判決之法律上利益者，不得提起之。其確認已執行而無回復原狀可能之行政處分或已消滅之行政處分為違法之訴訟，亦同。確認行政處分無效之訴訟，須已向原處分機關請求確認其無效未被允許，或經請求後於三十日內不為確答者，始得提起之。確認訴訟，於原告得提起或可得提起撤銷訴訟、課予義務訴訟或一般給付訴訟者，不得提起之。但確認行政處分無效之訴訟，不在此限。應提起撤銷訴訟、課予義務訴訟，誤為提起確認行政處分無效之訴訟，其未經訴願程序者，高等行政法院應以裁定將該事件移送於訴願管轄機關，並以行政法院收受訴狀之時，視為提起訴願。
+* 4 人民因中央或地方機關之違法行政處分，認為損害其權利或法律上之利益，經依訴願法提起訴願而不服其決定，或提起訴願逾三個月不為決定，或延長訴願決定期間逾二個月不為決定者，得向行政法院提起撤銷訴訟。逾越權限或濫用權力之行政處分，以違法論。訴願人以外之利害關係人，認為第一項訴願決定，損害其權利或法律上之利益者，得向行政法院提起撤銷訴訟。
 
-> 釋：一、行政處分已執行與行政處分消滅不同，依第一百九十六條規定之意旨，已執行之行政處分，如有回復原狀之可能，仍可提起撤銷訴訟，原第一項後段規定「確認已執行完畢或因其他事由而消滅之行政處分為違法之訴訟」，易滋行政處分已執行亦屬消滅之事由，且均得提起確認訴訟之誤會，爰予修正，期臻明確。二、又本條第三項原規定確認訴訟之補充性，限於「確認公法上法律關係成立或不成立之訴訟」，並不及於第一項後段之確認行政處分違法之訴訟。而認定行政處分是否違法，已有撤銷訴訟作為權利保護方式，如其得提起撤銷訴訟，卻逕行提起確認訴訟，或原得提起撤銷訴訟而怠於為之，至撤銷訴訟已無法提起時，始提起確認訴訟，不僅混淆行政訴訟權利保護之機制，且將使「確認已執行而無回復原狀可能之行政處分或已消滅之行政處分為違法之訴訟」既無期間之限制，亦不受補充性之限制，恐將有失法律秩序之安定性，爰將原第三項「確認公法上法律關係成立或不成立之訴訟」，修正為「確認訴訟」，並設但書排除確認行政處分無效之訴訟，以符法理。又確認訴訟之補充性，理論上不僅係對於撤銷訴訟而言，基於訴訟經濟及最大法律保護原則之要求，如得提起課予義務訴訟或一般給付訴訟者，亦不得提起確認訴訟。原第三項僅規定確認訴訟對於撤銷訴訟之補充性，未顧及課予義務訴訟及一般給付訴訟，亦欠周全，爰併予修正增列。三、按本法所定各類型之行政訴訟均以高等行政法院為第一審管轄法院，非確認訴訟獨然，原第四項規定自有贅累，爰予刪除。四、課予義務訴訟與撤銷訴訟同，亦應經訴願程序，爰於第四項增列之。
+> 釋：依最新制，撤銷訴訟之提起，未必均向高等行政法院為之，爰配合第三條之一規定，修正本條第一項、第三項規定。
+
+* 5 人民因中央或地方機關對其依法申請之案件，於法令所定期間內應作為而不作為，認為其權利或法律上利益受損害者，經依訴願程序後，得向行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。人民因中央或地方機關對其依法申請之案件，予以駁回，認為其權利或法律上利益受違法損害者，經依訴願程序後，得向行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。
+
+> 釋：依最新制，課予義務訴訟之提起，未必均向高等行政法院為之，爰配合第三條之一規定，修正本條規定。
+
+* 6 確認行政處分無效及確認公法上法律關係成立或不成立之訴訟，非原告有即受確認判決之法律上利益者，不得提起之。其確認已執行而無回復原狀可能之行政處分或已消滅之行政處分為違法之訴訟，亦同。確認行政處分無效之訴訟，須已向原處分機關請求確認其無效未被允許，或經請求後於三十日內不為確答者，始得提起之。確認訴訟，於原告得提起或可得提起撤銷訴訟、課予義務訴訟或一般給付訴訟者，不得提起之。但確認行政處分無效之訴訟，不在此限。應提起撤銷訴訟、課予義務訴訟，誤為提起確認行政處分無效之訴訟，其未經訴願程序者，行政法院應以裁定將該事件移送於訴願管轄機關，並以行政法院收受訴狀之時，視為提起訴願。
+
+> 釋：依最新制，確認訴訟之提起，未必均向高等行政法院為之，爰配合第三條之一規定，修正本條第四項規定。
 
 * 7 提起行政訴訟，得於同一程序中，合併請求損害賠償或其他財產上給付。
 
-* 8 人民與中央或地方機關間，因公法上原因發生財產上之給付或請求作成行政處分以外之其他非財產上之給付，得提起給付訴訟。因公法上契約發生之給付，亦同。前項給付訴訟之裁判，以行政處分應否撤銷為據者，應於依第四條第一項或第三項提起撤銷訴訟時，併為請求。原告未為請求者，審判長應告以得為請求。除別有規定外，給付訴訟以高等行政法院為第一審管轄法院。
+* 8 人民與中央或地方機關間，因公法上原因發生財產上之給付或請求作成行政處分以外之其他非財產上之給付，得提起給付訴訟。因公法上契約發生之給付，亦同。前項給付訴訟之裁判，以行政處分應否撤銷為據者，應於依第四條第一項或第三項提起撤銷訴訟時，併為請求。原告未為請求者，審判長應告以得為請求。
+
+> 釋：依最新制，給付訴訟未必均以高等行政法院為第一審管轄法院，爰刪除本條第三項規定。
 
 * 9 人民為維護公益，就無關自己權利及法律上利益之事項，對於行政機關之違法行為，得提起行政訴訟。但以法律有特別規定者為限。
 
@@ -60,9 +70,9 @@
 
 > 釋：一、本條新增。二、公教人員保險、勞工保險、農民健康保險及全民健康保險等公法上之保險事件，具有社會安全功能，故因此種公法上保險事件涉訟者，為便利人民就近尋求行政法院之權利保護，於第一項規定得由其住居所地或被保險人從事職業所在地之行政法院管轄。三、公法上之保險事件，大部分係涉及請領保險給付及取消被保險人資格、退保、變更投保薪資（金額）、罰鍰處分等，而可能起訴者為被保險人、受益人及投保單位。爰於第二項規定投保單位為原告時，得由其主事務所或主營業所所在地之行政法院管轄。
 
-* 16 有下列各款情形之一者，最高行政法院應依當事人之聲請或受訴行政法院之請求，指定管轄：一、有管轄權之行政法院因法律或事實不能行審判權。二、因管轄區域境界不明，致不能辨別有管轄權之行政法院。三、因特別情形由有管轄權之行政法院審判，恐影響公安或難期公平。前項聲請得向受訴行政法院或最高行政法院為之。
+* 16 有下列各款情形之一者，直接上級行政法院應依當事人之聲請或受訴行政法院之請求，指定管轄：一、有管轄權之行政法院因法律或事實不能行審判權者。二、因管轄區域境界不明，致不能辨別有管轄權之行政法院者。三、因特別情形由有管轄權之行政法院審判，恐影響公安或難期公平者。前項聲請得向受訴行政法院或直接上級行政法院為之。
 
-> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
+> 釋：依最新制，行政訴訟係採三級二審制，參考民事訴訟法第二十三條規定，指定管轄係由直接上級法院為之，爰修正本條規定。
 
 * 17 定行政法院之管轄以起訴時為準。
 
@@ -78,7 +88,9 @@
 
 > 釋：民事訴訟法第三十六條抗告期間之規定業已刪除，爰將本條文配合修正。
 
-* 21 前二條之規定於行政法院之書記官及通譯準用之。
+* 21 前二條規定於行政法院之司法事務官、書記官及通譯準用之。
+
+> 釋：配合高等行政法院置司法事務官，增加司法事務官迴避準用前二條規定。
 
 * 22 自然人、法人、中央及地方機關、非法人之團體，有當事人能力。
 
@@ -126,7 +138,9 @@
 
 * 41 訴訟標的對於第三人及當事人一造必須合一確定者，行政法院應以裁定命該第三人參加訴訟。
 
-* 42 行政法院認為撤銷訴訟之結果，第三人之權利或法律上利益將受損害者，得依職權命其獨立參加訴訟，並得因該第三人之聲請，裁定允許其參加。前項參加，準用第三十九條第三款之規定。參加人並得提出獨立之攻擊或防禦方法。前二項規定，於其他訴訟準用之。訴願人已向高等行政法院提起撤銷訴訟，利害關係人就同一事件再行起訴者，視為第一項之參加。
+* 42 行政法院認為撤銷訴訟之結果，第三人之權利或法律上利益將受損害者，得依職權命其獨立參加訴訟，並得因該第三人之聲請，裁定允許其參加。前項參加，準用第三十九條第三款規定。參加人並得提出獨立之攻擊或防禦方法。前二項規定，於其他訴訟準用之。訴願人已向行政法院提起撤銷訴訟，利害關係人就同一事件再行起訴者，視為第一項之參加。
+
+> 釋：依最新制，撤銷訴訟之提起，未必均向高等行政法院為之，爰配合第三條之一規定，修正本條第四項規定。
 
 * 43 第三人依前條規定聲請參加訴訟者，應向本訴訟繫屬之行政法院提出參加書狀，表明下列各款事項：一、本訴訟及當事人。二、參加人之權利或法律上利益，因撤銷訴訟之結果將受如何之損害。三、參加訴訟之陳述。行政法院認前項聲請不合前條規定者，應以裁定駁回之。關於前項裁定，得為抗告。駁回參加之裁定未確定前，參加人得為訴訟行為。
 
@@ -156,7 +170,9 @@
 
 * 54 訴訟委任之終止，應以書狀提出於行政法院，由行政法院送達於他造。由訴訟代理人終止委任者，自為終止之意思表示之日起十五日內，仍應為防衛本人權利所必要之行為。
 
-* 55 當事人或訴訟代理人經行政法院之許可，得於期日偕同輔佐人到場。行政法院認為必要時亦得命當事人或訴訟代理人偕同輔佐人到場。前二項之輔佐人，行政法院認為不適當時，得撤銷其許可或禁止其續為訴訟行為。
+* 55 當事人或訴訟代理人經審判長之許可，得於期日偕同輔佐人到場。但人數不得逾二人。審判長認為必要時亦得命當事人或訴訟代理人偕同輔佐人到場。前二項之輔佐人，審判長認為不適當時，得撤銷其許可或禁止其續為訴訟行為。
+
+> 釋：一、為促進程序之進行，關於輔佐人之許可、許可之撤銷及命到場，修正改由審判長為之。二、本條對輔佐人之人數如無限制，即可透過偕同輔佐人到場，而規避第四十九條對訴訟代理人人數限制之規定，爰增訂第一項但書規定，限制輔佐人人數不得逾二人。
 
 * 56 民事訴訟法第七十二條、第七十五條及第七十七條之規定，於本節準用之。
 
@@ -178,7 +194,9 @@
 
 > 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、原條文第二項規定之「有關機關」係指行政院，爰參酌民事訴訟法施行法第三條之規定予以明定之。
 
-* 63 行政法院得向送達地高等行政法院為送達之囑託；必要時亦得向送達地之地方法院為送達之囑託。
+* 63 行政法院得向送達地之地方法院為送達之囑託。
+
+> 釋：行政訴訟改為三級二審，將在地方法院設置行政訴訟庭，有關行政法院囑託送達之規定，參考民事訴訟法第一百二十五條規定修正之。
 
 * 64 對於無訴訟能力人為送達者，應向其全體法定代理人為之。但法定代理人有二人以上，如其中有應為送達處所不明者，送達得僅向其餘之法定代理人為之。對於法人、中央及地方機關或非法人之團體為送達者，應向其代表人或管理人為之。代表人或管理人有二人以上者，送達得僅向其中一人為之。無訴訟能力人為訴訟行為，未向行政法院陳明其法定代理人者，於補正前，行政法院得向該無訴訟能力人為送達。
 
@@ -210,11 +228,13 @@
 
 * 74 應受送達人拒絕收領而無法律上理由者，應將文書置於送達處所，以為送達。前項情形，如有難達留置情事者，準用前條之規定。
 
-* 75 送達，除由郵務機構行之者外，非經審判長或受命法官、受託法官或送達地高等行政法院法官或地方法院法官之許可，不得於星期日或其他休息日或日出前、日沒後為之。但應受送達人不拒絕收領者，不在此限。前項許可，書記官應於送達之文書內記明。
+* 75 送達，除由郵務機構行之者外，非經審判長或受命法官、受託法官或送達地地方法院法官之許可，不得於星期日或其他休息日或日出前、日沒後為之。但應受送達人不拒絕收領者，不在此限。前項許可，書記官應於送達之文書內記明。
 
-> 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、依據第一項之規定，第二項之書記官應包括高等行政法院及地方法院之書記官，爰將第二項之「行政法院書記官」，修正為「書記官」。
+> 釋：行政訴訟改為三級二審，將在地方法院設置行政訴訟庭，本法第六十三條囑託送達之規定已配合修正，爰併修正本條。
 
-* 76 行政法院書記官於法院內將文書付與應受送達人者，應命受送達人提出收據附卷。依第六十七條第三項之規定為送達者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
+* 76 行政法院書記官於法院內將文書付與應受送達人者，應命受送達人提出收據附卷。
+
+> 釋：第六十七條第三項規定業經中華民國九十九年一月十三日公布修正刪除，爰配合刪除本條第二項規定。
 
 * 77 於外國或境外為送達者，應囑託該國管轄機關或駐在該國之中華民國使領館或其他機構、團體為之。不能依前項之規定為囑託送達者，得將應送達之文書交郵務機構以雙掛號發送，以為送達。
 
@@ -296,6 +316,10 @@
 
 > 釋：一、本條新增。二、進行訴訟之必要費用，其項目及金額，極為繁瑣，又必須隨社會經濟情勢調整，除法律已有規定外，其項目及標準授權由司法院定之，以符實際需要，爰於第一項明定之。三、為簡化訴訟文書逐件封貼郵票之作業方式，減輕當事人購買郵票及法院登記、核算、催補、退還郵票之勞費，及免除因當事人另行支付行政法院人員於法院外為訴訟行為之食、宿、交通費之不便，上述費用應併入裁判費，不另徵收，爰明定之。
 
+* 98.7 交通裁決事件之裁判費，第二編第三章別有規定者，從其規定。
+
+> 釋：一、本條新增。二、交通裁決事件已於第二編第三章另訂其裁判費之規定，爰增訂本條，明定交通裁決事件之裁判費，第二編第三章有特別規定者，應優先適用該規定。
+
 * 99 因可歸責於參加人之事由致生無益之費用者，行政法院得命該參加人負擔其全部或一部。依第四十四條參加訴訟所生之費用，由參加人負擔。但他造當事人依第九十八條第一項及準用民事訴訟法第七十九條至第八十四條規定應負擔之訴訟費用，仍由該當事人負擔。
 
 > 釋：第九十八條第一項係由原條文第三項移列修正，本條第二項「第九十八條第三項」之規定，應配合修正為「第九十八條第一項」。
@@ -316,17 +340,21 @@
 
 > 釋：一、本法對溢收訴訟費用應如何處理，並無明文規定，增列準用民事訴訟法第七十七條之二十六之規定，俾便辦理。二、本法對准予訴訟救助之本案訴訟，於裁判確定後有關訴訟費用之徵收及訴訟救助之裁定，得否抗告，並無明文規定，爰修正增列準用民事訴訟法第一百十四條第一項及第一百十五條之規定，俾便辦理。
 
+* 104.1 適用通常訴訟程序之事件，以高等行政法院為第一審管轄法院。
+
+> 釋：一、本條新增。二、依最新制，適用通常訴訟程序事件，係以高等行政法院為第一審管轄法院，為免適用產生疑義，爰增訂本條。
+
 * 105 起訴，應以訴狀表明下列各款事項，提出於行政法院為之：一、當事人。二、起訴之聲明。三、訴訟標的及其原因事實。訴狀內宜記載適用程序上有關事項、證據方法及其他準備言詞辯論之事項；其經訴願程序者，並附具決定書。
 
 > 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
-* 106 第四條及第五條訴訟之提起，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。第四條及第五條之訴訟，自訴願決定書送達後，已逾三年者，不得提起。不經訴願程序即得提起第四條或第五條第二項之訴訟者，應於行政處分達到或公告後二個月之不變期間內為之。不經訴願程序即得提起第五條第一項之訴訟者，於應作為期間屆滿後，始得為之。但於期間屆滿後，已逾三年者，不得提起。
+* 106 第四條及第五條訴訟之提起，除本法別有規定外，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。第四條及第五條之訴訟，自訴願決定書送達後，已逾三年者，不得提起。不經訴願程序即得提起第四條或第五條第二項之訴訟者，應於行政處分達到或公告後二個月之不變期間內為之。不經訴願程序即得提起第五條第一項之訴訟者，於應作為期間屆滿後，始得為之。但於期間屆滿後，已逾三年者，不得提起。
 
-> 釋：一、第五條請求行政機關應為行政處分或特定內容之行政處分之訴訟，本法漏未規定起訴期間，爰修正第一項增列之。二、原第二項規定移列為第三項，並增加第五條訴訟之起訴期間之限期，以利法律秩序之安定。三、在法律特別規定不經訴願程序即得提起撤銷訴訟或第五條之訴訟之情形，例如經聽證程序，作成負擔處分，或駁回人民之申請，依行政程序法第一百零九條之規定，免經訴願程序即得提起撤銷訴訟，及在人民依法申請之案件，行政機關在法定期間內應作成處分而不作為，法律規定不經訴願即得提起第五條第一項之訴訟，本法並未規定起訴期間，爰增訂第三項、第四項規定明定之。
+> 釋：修正條文第二百三十七條之三已明定，交通裁決事件無庸經訴願程序即得提起撤銷訴訟，且其起訴期間為裁決書送達後三十日內，爰增訂第一項除外規定。
 
-* 107 原告之訴，有下列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政訴訟審判之權限者。但本法別有規定者，從其規定。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟，原告於訴狀誤列被告機關者，準用第一項之規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
+* 107 原告之訴，有下列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政訴訟審判之權限者。但本法別有規定者，從其規定。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟及課予義務訴訟，原告於訴狀誤列被告機關者，準用第一項規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
 
-> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左列」修正為「下列」。二、將第一百零七條第一項第一款作文字修正。另訴訟事件雖不屬行政訴訟審判之權限，如合於第十二條之二之要件者，行政法院應為移送，不得依本項以裁定駁回，爰增訂但書之規定。
+> 釋：第二項原僅規定在撤銷訴訟，原告於訴狀誤列被告機關者，審判長應定期命補正。惟此種規定依其性質亦應適用於課予義務訴訟，爰於第二項增列課予義務訴訟。
 
 * 108 行政法院除依前條規定駁回原告之訴或移送者外，應將訴狀送達於被告。並得命被告以答辯狀陳述意見。原處分機關、被告機關或受理訴願機關經行政法院通知後，應於十日內將卷證送交行政法院。
 
@@ -344,9 +372,17 @@
 
 > 釋：原第一項但書規定之文字易滋疑義，並遺漏課予義務訴訟，爰修正之。
 
-* 113 原告於判決確定前得撤回訴之全部或一部。但被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但在期日得以言詞為之。於期日所為之撤回，應記載於筆錄，如他造不在場，應將筆錄送達。訴之撤回，他造於收受撤回書狀或筆錄之送達後十日內未提出異議者，視為同意撤回。他造於期日到場，自訴之撤回之日起，十日內未提出異議者，亦同。
+* 113 原告於判決確定前得撤回訴之全部或一部。但於公益之維護有礙者，不在此限。前項撤回，被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但於期日得以言詞為之。以言詞所為之撤回，應記載於筆錄，如他造不在場，應將筆錄送達。訴之撤回，被告於期日到場，未為同意與否之表示者，自該期日起；其未於期日到場或係以書狀撤回者，自前項筆錄或撤回書狀送達之日起，十日內未提出異議者，視為同意撤回。
 
-* 114 訴之撤回違反公益者，不得為之。行政法院認訴之撤回違反公益，或有其他不合法之情形者，應於四個月內續行訴訟，並依第一百九十三條裁定，或於終局判決中說明之。
+> 釋：一、本法原第一百十四條第一項關於「訴之撤回違反公益者，不得為之」之規定，為我國所特有。因該項規定，使本條第一項前段依據處分權主義所設之規定，形同具文，蓋行政訴訟殆幾無與公益無關者，若與公益有關之訴訟概不許撤回，則本條第一項前段允許人民以自己責任，決定是否繼續請求行政法院權利保護之規定，幾無適用之餘地，有予修正之必要。而審究我國行政訴訟法之宗旨，第一條即明示行政訴訟之目的非僅以保障人民權益為限，國家行政權之合法行使亦在其中。易言之，於訴訟程序之設計上，人民主觀權利之保護與客觀法秩序之維持應併為考量。基於此立法宗旨，當事人對訴訟進行之處分權如有礙於客觀法秩序之維持時，仍應受到相當之限制，而原第一百十四條第一項以「違反公益」為否准訴訟撤回之基準，失之空泛，修正以「於公益之維護有礙者」為限，例外不許原告撤回訴訟，以符行政訴訟法之立法宗旨。爰將第一百十四條第一項關於訴訟撤回限制之規定移列修正為本條第一項但書，並以「於公益之維護有礙」一語取代「違反公益」，資為訴訟撤回之除外規定。二、原第一項但書移列為第二項，原第二項以下順次移列項次。三、第三項、第四項及第五項配合民事訴訟法第二百六十二條第二項以下之文字而為修正，以統一訴訟法典體例。
+
+* 114 行政法院就前條訴之撤回認有礙公益之維護者，應以裁定不予准許。前項裁定不得抗告。
+
+> 釋：一、原第一項移列修正為第一百十三條第一項但書。二、原告撤回訴訟是否具備法定要件，應由法院加以審查，如認其撤回有礙於公益之維護者，則不生撤回之效力，訴訟繫屬並未消滅。此審查判斷，涉及訴訟狀態之明確性，宜以裁定宣示法院判斷結果，以免訴訟處於不安定之狀態。爰修正原第二項規定，並移列為第一項。三、為避免遲滯訴訟，法院所為判斷結果之裁定，應不得抗告。爰增訂第二項以明之。
+
+* 114.1 適用通常訴訟程序之事件，因訴之變更或一部撤回，致其訴之全部屬於簡易訴訟程序或交通裁決事件訴訟程序之範圍者，高等行政法院應裁定移送管轄之地方法院行政訴訟庭。
+
+> 釋：一、本條新增。二、依最新制，簡易訴訟程序事件、交通裁決事件係以地方法院行政訴訟庭為第一審管轄法院，爰明定適用通常訴訟程序之事件，如因當事人訴之變更或一部撤回，致其訴之全部屬於簡易訴訟程序或交通裁決事件訴訟程序之範圍者，高等行政法院應以裁定移送管轄之地方法院行政訴訟庭。
 
 * 115 民事訴訟法第二百四十五條、第二百四十六條、第二百四十八條、第二百五十二條、第二百五十三條、第二百五十七條、第二百六十一條、第二百六十三條及第二百六十四條之規定，於本節準用之。
 
@@ -358,7 +394,9 @@
 
 * 119 關於停止執行或撤銷停止執行之裁定，得為抗告。
 
-* 120 原告準備言詞辯論之書狀，依第一百零五條之規定。被告因準備言詞辯論，宜於未逾就審期間二分之一以前，提出答辯狀。
+* 120 原告因準備言詞辯論之必要，應提出準備書狀。被告因準備言詞辯論，宜於未逾就審期間二分之一以前，提出答辯狀。
+
+> 釋：為充實準備程序，民事訴訟法有關書狀先行整理並協議簡化爭點程序，以促進審理集中化之相關規定，業為本法第一百三十二條予以準用。其中民事訴訟法第二百六十六條關於準備書狀應記載事項之規定，亦在準用之列。從而，原告因準備言詞辯論之必要而提出之書狀，應記載之事項當從其規定記載，已毋庸依本法第一百零五條規定，爰於第一項為文字之適度修正。
 
 * 121 行政法院因使辯論易於終結，認為必要時，得於言詞辯論前，為下列各款之處置：一、命當事人、法定代理人、代表人或管理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、行勘驗、鑑定或囑託機關、團體為調查。四、通知證人或鑑定人，及調取或命第三人提出文書、物件。五、使受命法官或受託法官調查證據。行政法院因闡明或確定訴訟關係，於言詞辯論時，得為前項第一款至第三款之處置，並得將當事人或第三人提出之文書、物件暫留置之。
 
@@ -371,6 +409,10 @@
 * 124 審判長開始、指揮及終結言詞辯論，並宣示行政法院之裁判。審判長對於不服從言詞辯論之指揮者，得禁止發言。言詞辯論須續行者，審判長應速定其期日。
 
 * 125 行政法院應依職權調查事實關係，不受當事人主張之拘束。審判長應注意使當事人得為事實上及法律上適當完全之辯論。審判長應向當事人發問或告知，令其陳述事實、聲明證據，或為其他必要之聲明及陳述；其所聲明或陳述有不明瞭或不完足者，應令其敘明或補充之。陪席法官告明審判長後，得向當事人發問或告知。
+
+* 125.1 行政法院為使訴訟關係明確，必要時得命司法事務官就事實上及法律上之事項，基於專業知識對當事人為說明。行政法院因司法事務官提供而獲知之特殊專業知識，應予當事人辯論之機會，始得採為裁判之基礎。
+
+> 釋：一、本條新增。二、第一項明定行政法院為使訴訟關係明確，必要時得命司法事務官就事實上及法律上之事項，基於專業知識對當事人為說明。三、又依行政法院組織法草案第十條之二第一項第一款規定，司法事務官得辦理稅務事件之資料蒐集、分析及提供財稅會計等專業意見。司法事務官蒐集、分析資料後，提供予法官之財稅會計專業意見，並非證據方法，僅是法院內部之法官輔助人。惟行政法院因司法事務官提供而獲知之特殊專業知識，如係兩造當事人攻擊防禦所未曾提出者，應於裁判前對當事人為適當之揭露，使當事人有表示意見之機會，避免突襲性裁判，爰參酌第一百八十八條、第一百六十二條規定，於本條第二項明定，行政法院因司法事務官提供而獲知之特殊專業知識，應予當事人辯論之機會，始得採為裁判之基礎。
 
 * 126 凡依本法使受命法官為行為者，由審判長指定之。行政法院應為之囑託，除別有規定外，由審判長行之。
 
@@ -416,7 +458,9 @@
 
 * 142 除法律別有規定外，不問何人，於他人之行政訴訟有為證人之義務。
 
-* 143 證人受合法之通知，無正當理由而不到場者，行政法院得以裁定處新臺幣三千元以下罰鍰。證人已受到項裁定，經再次通知仍不到場者，得再處新臺幣一萬五千元以下罰鍰，並得拘提之。拘提證人，準用刑事訴訟法關於拘提被告之規定；證人為現役軍人者，應以拘票囑託該管長官執行。處證人罰鍰之裁定，得為抗告，抗告中應停止執行。
+* 143 證人受合法之通知，無正當理由而不到場者，行政法院得以裁定處新臺幣三萬元以下罰鍰。證人已受前項裁定，經再次通知仍不到場者，得再處新臺幣六萬元以下罰鍰，並得拘提之。拘提證人，準用刑事訴訟法關於拘提被告之規定；證人為現役軍人者，應以拘票囑託該管長官執行。處證人罰鍰之裁定，得為抗告，抗告中應停止執行。
+
+> 釋：證人受合法之通知，無正當理由而不到場者及經再次通知仍不到場者，本條原規定處罰鍰之金額分別為新臺幣三千元及一萬五千元以下，顯屬過低，爰參酌民事訴訟法第三百零三條規定，提高罰鍰金額。
 
 * 144 以公務員、中央民意代表或曾為公務員、中央民意代表之人為證人，而就其職務上應守秘密之事項訊問者，應得該監督長官或民意機關之同意。前項同意，除有妨害國家高度機密者外，不得拒絕。以受公務機關委託承辦公務之人為證人者，準用前二項之規定。
 
@@ -430,7 +474,9 @@
 
 * 147 依前二條規定，得拒絕證言者，審判長應於訊問前或知有該項情形時告知之。
 
-* 148 證人不陳明拒絕之原因事實而拒絕證言，或以拒絕為不當之裁定已確定而仍拒絕證言者，行政法院得以裁定處新臺幣三千元以下罰鍰。前項裁定得為抗告，抗告中應停止執行。
+* 148 證人不陳明拒絕之原因事實而拒絕證言，或以拒絕為不當之裁定已確定而仍拒絕證言者，行政法院得以裁定處新臺幣三萬元以下罰鍰。前項裁定得為抗告，抗告中應停止執行。
+
+> 釋：本條原規定之罰鍰金額過低，爰參酌民事訴訟法第三百十一條規定，提高罰鍰金額。
 
 * 149 審判長於訊問前，應命證人各別具結。但其應否具結有疑義者，於訊問後行之。審判長於證人具結前，應告以具結之義務及偽證之處罰。證人以書狀為陳述者，不適用前二項之規定。
 
@@ -480,7 +526,9 @@
 
 * 168 關於第三人提出文書之義務，準用第一百四十四條至第一百四十七條及第一百六十三條第二款至第五款之規定。
 
-* 169 第三人無正當理由不從提出文書之命者，行政法院得以裁定處新臺幣三千元以下罰鍰；於必要時，並得為強制處分。前項強制處分之執行，適用第三百零六條之規定。第一項裁定得為抗告，抗告中應停止執行。
+* 169 第三人無正當理由不從提出文書之命者，行政法院得以裁定處新臺幣三萬元以下罰鍰；於必要時，並得為強制處分。前項強制處分之執行，適用第三百零六條規定。第一項裁定得為抗告，抗告中應停止執行。
+
+> 釋：本條原規定之罰鍰金額過低，爰參酌民事訴訟法第三百四十九條規定，提高罰鍰金額。
 
 * 170 第三人得請求提出文書之費用。第一百五十五條之規定，於前項情形準用之。
 
@@ -492,7 +540,13 @@
 
 * 174 第一百六十四條至第一百七十條之規定，於勘驗準用之。
 
-* 175 保全證據之聲請，在起訴後，向受訴行政法院為之；在起訴前，向受訊問人住居地或證物所在地之高等行政法院為之。遇有急迫情形時，於起訴後，亦得向前項高等行政法院聲請保全證據。
+* 175 保全證據之聲請，在起訴後，向受訴行政法院為之；在起訴前，向受訊問人住居地或證物所在地之地方法院行政訴訟庭為之。遇有急迫情形時，於起訴後，亦得向前項地方法院行政訴訟庭聲請保全證據。
+
+> 釋：為保全證據之便利，爰將本條有關得向受訊問人住居地或證物所在地「高等行政法院」聲請之規定，改為得向「地方法院行政訴訟庭」聲請。
+
+* 175.1 行政法院於保全證據時，得命司法事務官協助調查證據。
+
+> 釋：一、本條新增。二、依司法院九十九年二月十一日院台廳司一字第○九九○○○四○六四號函送立法院審議之行政法院組織法部分條文修正草案第十條之一、第十條之二規定，高等行政法院置具有財經、稅務或會計專業之司法事務官，輔助法官辦理稅務等相關事件，爰於本條明定，於上開事件保全證據時，得命司法事務官以其專業，協助調查證據。
 
 * 176 民事訴訟法第二百十五條、第二百十七條至第二百十九條、第二百七十八條、第二百八十一條、第二百八十二條、第二百八十二條之一、第二百八十四條至第二百八十六條、第二百九十一條至第二百九十三條、第二百九十五條、第二百九十六條、第二百九十六條之一、第二百九十八條至第三百零一條、第三百零四條、第三百零五條、第三百零九條、第三百十條、第三百十三條、第三百十三條之一、第三百十六條至第三百十九條、第三百二十一條、第三百二十二條、第三百二十五條至第三百二十七條、第三百三十一條至第三百三十七條、第三百三十九條、第三百四十一條至第三百四十三條、第三百五十二條至第三百五十八條、第三百六十一條、第三百六十四條至第三百六十六條、第三百六十八條、第三百七十條至第三百七十六條之二之規定，於本節準用之。
 
@@ -502,6 +556,10 @@
 
 * 178 行政法院就其受理訴訟之權限，如與普通法院確定裁判之見解有異時，應以裁定停止訴訟程序，並聲請司法院大法官解釋。
 
+* 178.1 行政法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，得聲請司法院大法官解釋。前項情形，行政法院應裁定停止訴訟程序。
+
+> 釋：一、本條新增。二、按「憲法為國家最高規範，法律牴觸憲法者無效，法律與憲法有無牴觸發生疑義而須予以解釋時，由司法院大法官掌理，此觀憲法第一百七十一條、第一百七十三條、第七十八條及第七十九條第二項規定甚明。又法官依據法律獨立審判，憲法第八十條定有明文，故依法公布施行之法律，法官應以其為審判之依據，不得認定法律為違憲而逕行拒絕適用。惟憲法之效力既高於法律，法官有優先遵守之義務，法官於審理案件時，對於適用之法律，依其合理之確信，認有牴觸憲法之疑義者，自應許其先行聲請解釋憲法，以求解決。是遇有前述情形，各級法院得以之為先決問題，裁定停止訴訟程序，並提出客觀上形成確信法律為違憲之具體理由，聲請司法院大法官解釋」之意旨，業經司法院釋字第三七一號解釋揭示。是各級法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，依上開意旨，即得聲請大法官解釋。第二百五十二條規定得聲請大法官解釋之法院限於最高行政法院，而不及於各級行政法院，與前開解釋意旨不符，爰將第二百五十二條移列為第一百七十八條之一，明示行政法院得依司法院釋字第三七一號解釋意旨聲請大法官解釋。另依據第二百六十三條規定，本條於上訴審亦準用之。三、又前述司法院釋字第三七一號解釋所謂之「裁定停止訴訟程序」，乃法官聲請釋憲必須遵守之程序，業經司法院釋字第五九○號解釋補充在案。原條文文字「得以裁定停止訴訟程序，聲請大法官解釋」，易使人誤以為聲請釋憲時行政法院得不裁定停止訴訟程序，爰修正條文文字用語。
+
 * 179 本於一定資格，以自己名義為他人任訴訟當事人之人，喪失其資格或死亡者，訴訟程序在有同一資格之人承受其訴訟以前當然停止。依第二十九條規定，選定或指定為訴訟當事人之人全體喪失其資格者，訴訟程序在該有共同利益人全體或新選定或指定為訴訟當事人之人承受其訴訟以前當然停止。
 
 * 180 第一百七十九條之規定，於有訴訟代理人時不適用之。但行政法院得酌量情形裁定停止其訴訟程序。
@@ -510,11 +568,17 @@
 
 * 182 訴訟程序當然或裁定停止間，行政法院及當事人不得為關於本案之訴訟行為。但於言詞辯論終結後當然停止者，本於其辯論之裁判得宣示之。訴訟程序當然或裁定停止者，期間停止進行；自停止終竣時起，其期間更始進行。
 
-* 183 除撤銷訴訟外，當事人得以合意停止訴訟程序。但行政法院認有維護公益之必要者，應於四個月內續行訴訟。前項合意，應由兩造向受訴行政法院陳明。不變期間之進行不因第一項合意停止而受影響。
+* 183 當事人得以合意停止訴訟程序。但於公益之維護有礙者，不在此限。前項合意，應由兩造向受訴行政法院陳明。行政法院認第一項之合意有礙公益之維護者，應於兩造陳明後，一個月內裁定續行訴訟。前項裁定不得聲明不服。不變期間之進行不因第一項合意停止而受影響。
 
-* 184 除前條第一項但書情形外，合意停止訴訟程序之當事人，自陳明合意停止時起，如於四個月內不續行訴訟者，視為撤回其訴；續行訴訟而再以合意停止訴訟程序者，以一次為限。如再次陳明合意停止訴訟程序，視為撤回其訴。
+> 釋：一、本條至第一百八十五條係關於當事人合意停止訴訟及視為撤回起訴之相關規定，亦為處分權主義之體現，但囿於本條第一項：「除撤銷訴訟外，當事人得以合意停止訴訟程序。但行政法院認有維護公益之必要，應於四個月內續行訴訟」之規定，一則因撤銷訴訟為行政訴訟之大宗，二則行政訴訟之本質多與公益有關，因此該部分之規定，於實務操作上，幾無適用之餘地。且選擇撤銷訴訟之類型排除合意停止訴訟程序之適用，亦乏合理性，以公益性之強度而言，撤銷訴訟之公益性未必高於課予義務訴訟。茲配合第一百十三條、第一百十四條之修正，以合意停止訴訟程序於公益之維護有礙者，始不許當事人合意停止訴訟，爰將本條第一項除外規定刪除，並修正但書文字。二、當事人之合意是否有礙於公益之維護，而例外使其不生停止訴訟之效力，應由法院加以審認，並應於一個月內以裁定明示之，以避免訴訟長久處於是否停止之不明確狀態。又為避免遲滯訴訟，本裁定不得聲明不服。爰增列第三項、第四項。三、原第三項移列為第五項。
 
-* 185 當事人兩造無正當理由遲誤言詞辯論期日者，除撤銷訴訟或別有規定外，視為合意停止訴訟程序。如於四個月內不續行訴訟者，視為撤回其訴。前項訴訟程序停止間，行政法院於認為必要時，得依職權續行訴訟。如無正當理由兩造仍遲誤不到者，視為撤回其訴。
+* 184 除有前條第三項之裁定外，合意停止訴訟程序之當事人，自陳明合意停止時起，如於四個月內不續行訴訟者，視為撤回其訴；續行訴訟而再以合意停止訴訟程序者，以一次為限。如再次陳明合意停止訴訟程序，視為撤回其訴。
+
+> 釋：配合前條第一項、第三項修正，而為文字修正。
+
+* 185 當事人兩造無正當理由遲誤言詞辯論期日，除有礙公益之維護者外，視為合意停止訴訟程序。如於四個月內不續行訴訟者，視為撤回其訴。但行政法院認有必要時，得依職權續行訴訟。行政法院依前項但書規定續行訴訟，兩造如無正當理由仍不到者，視為撤回其訴。行政法院認第一項停止訴訟程序有礙公益之維護者，除別有規定外，應自該期日起，一個月內裁定續行訴訟。前項裁定不得聲明不服。
+
+> 釋：一、配合第一百八十三條撤銷訴訟除外規定之修正，將本條第一項「除撤銷訴訟或別有規定外」等文字修正為「除有礙公益之維護者外」，使兩造無正當理由遲誤言詞辯論期日時，限於有礙公益之維護者，始不視為合意停止訴訟。二、行政法院認停止訴訟程序有礙公益之維護，或有其他訴訟上之必要時，仍得依職權續行訴訟，此為處分權主義之例外規定，於體例上宜以但書形式規定之，爰將原第二項前段規定移列為第一項但書，第二項後段修正文字仍列為第二項。三、兩造遲誤期日是否有礙公益之維護，而例外使其不生停止訴訟之效力，應由法院加以審認，並應於一個月內以裁定明示之，以避免訴訟長久處於是否停止之不明確狀態。又為避免遲滯訴訟，對該裁定不得聲明不服，爰增列第三項、第四項。
 
 * 186 民事訴訟法第一百六十八條至第一百七十一條、第一百七十三條、第一百七十四條、第一百七十六條至第一百八十一條、第一百八十五條至第一百八十七條之規定，於本節準用之。
 
@@ -534,7 +598,9 @@
 
 * 193 行政訴訟進行中所生程序上之爭執，達於可為裁判之程度者，行政法院得先為裁定。
 
-* 194 撤銷訴訟及其他有關維護公益之訴訟，當事人兩造於言詞辯論期日無正當理由均不到場者，行政法院得依職權調查事實，不經言詞辯論，逕為判決。
+* 194 行政訴訟有關公益之維護者，當事人兩造於言詞辯論期日無正當理由均不到場時，行政法院得依職權調查事實，不經言詞辯論，逕為判決。
+
+> 釋：配合第一百八十五條之修正，將行政法院於兩造遲誤言詞辯論期日時，得不經言詞辯論逕為判決之要件修正為「行政訴訟有關公益之維護者」。至於無關於公益之訴訟，兩造於言詞辯論期日兩次無正當理由均不到場者，依第一百八十五條第二項規定，視為撤回其訴。
 
 * 195 行政法院認原告之訴為有理由者，除別有規定外，應為其勝訴之判決；認為無理由者，應以判決駁回之。撤銷訴訟之判決，如係變更原處分或決定者，不得為較原處分或決定不利於原告之判決。
 
@@ -546,7 +612,9 @@
 
 * 198 行政法院受理撤銷訴訟，發現原處分或決定雖屬違法，但其撤銷或變更於公益有重大損害，經斟酌原告所受損害、賠償程度、防止方法及其他一切情事，認原處分或決定之撤銷或變更顯與公益相違背時，得駁回原告之訴。前項情形，應於判決主文中諭知原處分或決定違法。
 
-* 199 行政法院為前條判決時，應依原告之聲明，將其因違法處分或決定所受之損害於判決內命被告機關賠償。原告未為前項聲明者，得於前條判決確定後一年內，向高等行政法院訴請賠償。
+* 199 行政法院為前條判決時，應依原告之聲明，將其因違法處分或決定所受之損害，於判決內命被告機關賠償。原告未為前項聲明者，得於前條判決確定後一年內，向行政法院訴請賠償。
+
+> 釋：配合本章其他條文文字，將第二項高等行政法院酌為修正為行政法院。
 
 * 200 行政法院對於人民依第五條規定請求應為行政處分或應為特定內容之行政處分之訴訟，應為下列方式之裁判：一、原告之訴不合法者，應以裁定駁回之。二、原告之訴無理由者，應以判決駁回之。三、原告之訴有理由，且案件事證明確者，應判命行政機關作成原告所申請內容之行政處分。四、原告之訴雖有理由，惟案件事證尚未臻明確或涉及行政機關之行政裁量決定者，應判命行政機關遵照其判決之法律見解對於原告作成決定。
 
@@ -586,13 +654,19 @@
 
 * 215 撤銷或變更原處分或決定之判決，對第三人亦有效力。
 
-* 216 撤銷或變更原處分或決定之判決，就其事件有拘束各關係機關之效力。原處分或決定經判決撤銷後，機關須重為處分或決定者，應依判決意旨為之。前二項之規定，於其他訴訟準用之。
+* 216 撤銷或變更原處分或決定之判決，就其事件有拘束各關係機關之效力。原處分或決定經判決撤銷後，機關須重為處分或決定者，應依判決意旨為之。前二項判決，如係指摘機關適用法律之見解有違誤時，該機關即應受判決之拘束，不得為相左或歧異之決定或處分。前三項之規定，於其他訴訟準用之。
 
-* 217 第二百零四條第二項至第四項、第二百零五條及第二百十條之規定，於裁定準用之。
+> 釋：一、增訂第三項「前二項判決，如係指摘機關適用法律之見解有違誤時，該機關即應受判決之拘束，不得為相左或歧異之決定或處分。」二、原條文第三項移列為第四項，並酌作文字修正。
+
+* 217 第二百零四條第二項至第四項、第二百零五條、第二百十條及民事訴訟法第二百二十八條規定，於裁定準用之。
+
+> 釋：本法對裁定原本之交付期間疏未規定，爰參酌民事訴訟法第二百三十九條體例，增訂民事訴訟法第二百二十八條關於判決原本交付期間之規定，於本法裁定原本之交付亦準用之，以杜爭議。
 
 * 218 民事訴訟法第二百二十四條、第二百二十七條、第二百二十八條、第二百三十條、第二百三十二條、第二百三十三條、第二百三十六條、第二百三十七條、第二百四十條、第三百八十五條至第第三百八十八條、第三百九十六條第一項、第二項及第三百九十九條之規定，於本節準用之。
 
-* 219 當事人就訴訟標的具有處分權並不違反公益者，行政法院不問訴訟程度如何，得隨時試行和解。受命法官或受託法官，亦同。第三人經行政法院之許可，得參加和解。行政法院認為必要時，得通知第三人參加。
+* 219 當事人就訴訟標的具有處分權且其和解無礙公益之維護者，行政法院不問訴訟程度如何，得隨時試行和解。受命法官或受託法官，亦同。第三人經行政法院之許可，得參加和解。行政法院認為必要時，得通知第三人參加。
+
+> 釋：按原條文第一項規定法院得試行和解之要件為「不違反公益」，其用語參照第一百十四條第一項規定，修正為「其和解無礙公益之維護」。
 
 * 220 因試行和解，得命當事人、法定代理人、代表人或管理人本人到場。
 
@@ -612,29 +686,85 @@
 
 * 228 第二百二十四條至第二百二十六條之規定，於前條第二項情形準用之。
 
-* 229 下列各款行政訴訟事件，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣四十萬元以下者。二、因不服行政機關所為新臺幣四十萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣四十萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二十萬元或增至新臺幣六十萬元。
+* 229 適用簡易訴訟程序之事件，以地方法院行政訴訟庭為第一審管轄法院。下列各款行政訴訟事件，除本法別有規定外，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣四十萬元以下者。二、因不服行政機關所為新臺幣四十萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣四十萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二十萬元或增至新臺幣六十萬元。
 
-> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。二、本條原定適用簡易程序之金額或價額，依當今之國民生活水準已屬過低，為因應社會經濟發展，並參酌民事訴訟法第四百二十七條之規定，爰將第一項第一款至第三款之金額或價額修正為新臺幣四十萬元以下。第二項之數額修正為新臺幣二十萬元及六十萬元。
+> 釋：一、明定適用簡易訴訟程序之事件，以地方法院行政訴訟庭為第一審管轄法院。二、關於交通裁決事件，本法第二編第三章已另訂特殊救濟程序，不屬簡易訴訟程序事件，爰將原第一項條文移列為第二項，並增加除外規定。
 
-* 230 前條第一項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣四十萬元者，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣四十萬元，而以原訴與之合併辯論及裁判者，亦同。
+* 230 前條第二項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣四十萬元者，其辯論及裁判改依通常訴訟程序之規定，地方法院行政訴訟庭並應裁定移送管轄之高等行政法院；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣四十萬元，而以原訴與之合併辯論及裁判者，亦同。
 
-> 釋：本條原定適用簡易程序之金額或價額，依當今之國民生活水準已屬過低，為因應社會經濟發展，並參酌民事訴訟法第四百二十七條之規定，爰將金額或價額修正為新臺幣四十萬元以下。
+> 釋：一、配合前條項次調整，酌為文字修正。二、於因訴之變更、追加或提起反訴，致訴訟標的之金額或價額逾新臺幣四十萬元者，其辯論及裁判即不得依簡易訴訟程序為之，而應依通常訴訟程序審理。惟因通常訴訟程序係以高等行政法院為第一審管轄法院，爰於本條增訂地方法院行政訴訟庭於此情形，應裁定移送管轄之高等行政法院。
 
 * 231 起訴及其他期日外之聲明或陳述，概得以言詞為之。以言詞起訴者，應將筆錄送達於他造。
 
 * 232 簡易訴訟程序在獨任法官前行之。
 
-* 233 簡易訴訟程序之裁判得不經言詞辯論為之。行言詞辯論者，其言詞辯論期日之通知書，應與訴狀或第二百三十一條第二項之筆錄一併送達於他造。
+* 233 言詞辯論期日之通知書，應與訴狀或第二百三十一條第二項之筆錄一併送達於他造。
+
+> 釋：一、按行政訴訟除別有規定外，應本於言詞辯論而為裁判，本法第一百八十八條第一項定有明文。考量本次修法於各地方法院設置行政訴訟庭，人民應訴不便之因素已獲改善，為保障人民之辯論權，爰刪除本條第一項簡易訴訟程序之裁判得不經言詞辯論之規定，使簡易訴訟程序事件回歸常態，原則上均應經言詞辯論為之。二、第二項文字，配合酌為修正。
 
 * 234 判決書內之事實、理由，得不分項記載，並得僅記載其要領。
 
-* 235 對於適用簡易程序之裁判提起上訴或抗告，須經最高行政法院之許可。前項許可，以訴訟事件所涉及之法律見解具有原則性者為限。
+* 235 對於簡易訴訟程序之裁判不服者，除本法別有規定外，得上訴或抗告於管轄之高等行政法院。前項上訴或抗告，非以原裁判違背法令為理由，不得為之。對於簡易訴訟程序之第二審裁判，不得上訴或抗告。
 
-* 236 簡易程序除本章別有規定外，仍適用通常訴訟程序之規定。
+> 釋：一、行政訴訟制度成為三級二審制並於地方法院設置行政訴訟庭後，簡易訴訟程序事件之第一審裁判既然改由地方法院行政訴訟庭管轄，當事人對其裁判不服，除本法別有規定外，自得向其直接上級審高等行政法院提起上訴或抗告，爰將簡易訴訟程序之第二審，定為高等行政法院。二、為使當事人獲得較完整之法律審救濟，並可達成金字塔型訴訟架構之理想目標，將現行簡易訴訟程序事件之「上訴或抗告，須經最高行政法院之許可」、「許可，以訴訟事件所涉及之法律見解具有原則性者為限」之要件，放寬為「以原裁判違背法令為理由」，即得上訴或抗告於高等行政法院，由高等行政法院為法律審。三、行政訴訟事件均係二審終結，爰於第三項明定對於簡易訴訟程序之第二審裁判，不得上訴或抗告。
+
+* 235.1 高等行政法院受理前條第一項訴訟事件，認有確保裁判見解統一之必要者，應以裁定移送最高行政法院裁判之。前項裁定，不得聲明不服。最高行政法院認高等行政法院裁定移送之訴訟事件，並未涉及裁判見解統一之必要者，應以裁定發回。受發回之高等行政法院，不得再將訴訟事件裁定移送最高行政法院。
+
+> 釋：一、本條新增。二、為避免簡易訴訟程序事件因以高等行政法院為終審，而衍生原裁判所持之法律見解與裁判先例歧異之問題，爰於本條第一項規定，若上訴或抗告事件有確保裁判見解統一之必要者，高等行政法院不應自為裁判，而以裁定移送最高行政法院裁判之。三、此移送裁定對當事人並無不利，爰於第二項明定當事人不得聲明不服。四、最高行政法院如認高等行政法院裁定移送之訴訟事件，並未涉及裁判見解統一之必要者，則該事件並無由最高行政法院裁判之必要，爰於第三項明定最高行政法院應將該訴訟事件裁定發回。惟為避免受發回之法院又檢具其他事證再次裁定移送最高行政法院，使案件來回擺盪影響當事人訴訟權益，爰明定受發回之高等行政法院不得再將該訴訟事件裁定移送最高行政法院。
+
+* 236 簡易訴訟程序除本章別有規定外，仍適用通常訴訟程序之規定。
+
+> 釋：為統一法律用語，爰將條文文字「簡易程序」修正為「簡易訴訟程序」。
+
+* 236.1 對於簡易訴訟程序之裁判提起上訴或抗告，應於上訴或抗告理由中表明下列事由之一，提出於原地方法院行政訴訟庭為之：一、原裁判所違背之法令及其具體內容。二、依訴訟資料可認為原裁判有違背法令之具體事實。
+
+> 釋：一、本條新增。二、對於簡易訴訟程序之裁判提起上訴或抗告，須以原裁判違背法令為理由，為便利第二審法院之審理，以貫徹簡易訴訟程序之簡速目的，宜責由當事人於上訴狀或抗告狀內記載理由，提出於原地方法院行政訴訟庭。又為使上訴人或抗告人知悉如何記載上訴或抗告理由，爰於本條明定其應表明下列各款事項之一：(一)原裁判所違背之法令及其具體內容，例如揭示所違背法令之條項，或有關解釋、判例字號等及其具體內容。(二)依訴訟資料可認為原裁判有違背法令之具體事項。
+
+* 236.2 應適用通常訴訟程序之事件，第一審誤用簡易訴訟程序審理並為判決者，受理其上訴之高等行政法院應廢棄原判決，逕依通常訴訟程序為第一審判決。但當事人於第一審對於該程序誤用已表示無異議或無異議而就該訴訟有所聲明或陳述者，不在此限。前項但書之情形，高等行政法院應適用簡易訴訟上訴審程序之規定為裁判。簡易訴訟程序之上訴，除第二百四十一條之一規定外，準用第三編規定。簡易訴訟程序之抗告、再審及重新審理，分別準用第四編至第六編規定。
+
+> 釋：一、本條新增。二、應適用通常訴訟程序之事件，第一審地方法院行政訴訟庭誤用簡易訴訟程序審理並為判決，如當事人在第一審程序曾依行政訴訟法第一百三十二條準用民事訴訟法第一百九十七條第一項規定對於該程序誤用提出異議者，其訴訟程序即有重大瑕疵，如當事人對該簡易訴訟程序第一審判決提起上訴，受理上訴之高等行政法院應將該判決廢棄。惟高等行政法院本即為通常訴訟程序之第一審管轄法院，為免廢棄原判決後另分由其他法官處理，致訴訟不經濟，爰於第一項前段明定受理之高等行政法院應逕依通常訴訟程序為第一審判決。至於當事人於第一審對該程序誤用已表示無異議或無異議而就該訴訟有所聲明或陳述者，該訴訟程序之瑕疵即已補正，上訴審法院自不得因而廢棄原判決，爰明定於第一項但書。三、第二項明定於第一項但書之情形，其上訴事件，高等行政法院應適用簡易訴訟上訴審程序之規定為裁判。四、第三項明定簡易訴訟程序之上訴，除第二百四十一條之一規定外，準用第三編規定。五、第四項明定簡易訴訟程序之抗告、再審及重新審理，分別準用第四編至第六編規定。
 
 * 237 民事訴訟法第四百三十條、第四百三十一條及第四百三十三條之規定，於本章準用之。
 
-* 238 對於高等行政法院之終局判決，除法律別有規定外，得上訴於最高行政法院。於上訴審程序，不得為訴之變更、追加或提起反訴。
+* 237.1 本法所稱交通裁決事件如下：一、不服道路交通管理處罰條例第八條及第三十七條第五項之裁決，而提起之撤銷訴訟、確認訴訟。二、合併請求返還與前款裁決相關之已繳納罰鍰或已繳送之駕駛執照、計程車駕駛人執業登記證、汽車牌照。合併提起前項以外之訴訟者，應適用簡易訴訟程序或通常訴訟程序之規定。第二百三十七條之二、第二百三十七條之三、第二百三十七條之四第一項及第二項規定，於前項情形準用之。
+
+> 釋：一、本條新增。二、交通裁決本質為行政處分，其因質輕量多，過去四十年考量行政法院未能普設，為顧及民眾訴訟便利，並兼顧行政法院負荷，而立法規定其救濟程序由普通法院交通法庭依聲明異議方式，準用刑事訴訟法審理。各地方法院設置行政訴訟庭後，前開顧慮已然消除，爰將此類事件之救濟程序，改依行政救濟程序處理。三、本條第一項明定本法所稱交通裁決事件之範圍，限於不服道路交通管理處罰條例第八條及第三十七條第五項之裁決，而提起之撤銷訴訟或確認訴訟（例如：認為裁決違法而提起撤銷之訴，或認為裁決無效或主張已執行之裁決為違法而無回復原狀之可能，而提起確認之訴）及合併請求返還與前款裁決相關之已繳納罰鍰或已繳送之駕駛執照、計程車駕駛人執業登記證、汽車牌照者。四、又本章係因應交通裁決事件質輕量多之特性，而設之特殊程序規定，為免提起前開訴訟並合併請求致使訴訟過於複雜（例如：合併請求損害賠償；或合併請求行政機關為某種事實行為；或合併請求撤銷與裁決無關之其他行政處分），爰於第二項限制，合併提起第一項以外之訴訟者，即應另依簡易訴訟程序或通常訴訟程序審理。五、第三項明定第二百三十七條之二、第二百三十七條之三、第二百三十七條之四第一項及第二項規定，於前項情形準用之。
+
+* 237.2 交通裁決事件，得由原告住所地、居所地、所在地或違規行為地之地方法院行政訴訟庭管轄。
+
+> 釋：一、本條新增。二、實務上，部分辦理交通裁決業務者（例如監理站），並不具機關資格，而無行政訴訟之當事人能力，但因原告（受處分人）提起訴訟，須以具有機關資格者為被告（例如監理所），若貫徹以原就被之訴訟原則，將使民眾訴訟不便，爰於本條增訂特別審判籍，即於交通裁決事件，亦得由原告住所地、居所地、所在地或違規行為地之地方法院行政訴訟庭管轄。
+
+* 237.3 交通裁決事件訴訟之提起，應以原處分機關為被告，逕向管轄之地方法院行政訴訟庭為之。交通裁決事件中撤銷訴訟之提起，應於裁決書送達後三十日之不變期間內為之。前項訴訟，因原處分機關未為告知或告知錯誤，致原告於裁決書送達三十日內誤向原處分機關遞送起訴狀者，視為已遵守起訴期間，原處分機關並應即將起訴狀移送管轄法院。
+
+> 釋：一、本條新增。二、第一項明定交通裁決事件訴訟之提起，係以原處分機關為被告，免除訴願或其他先行程序，直接向管轄之地方法院行政訴訟庭起訴。三、撤銷訴訟之提起，宜有時間限制，以兼顧法律關係之安定性。行政訴訟法第一百零六條第一項雖規定撤銷訴訟之起訴不變期間為二個月，惟於交通裁決事件因質輕量多，而免除訴願前置程序，為使法律關係及早確定，並參酌一般須經訴願程序提起之撤銷訴訟，受處分人須於行政處分達到或公告期滿之次日起三十日內提起訴願，方能獲得法律救濟，爰將交通裁決事件中撤銷訴訟之起訴期間定為自裁決書送達後三十日。至於確認訴訟、給付訴訟，因原即無起訴期間之限制，故交通裁決事件中確認訴訟、給付訴訟，本條亦不另限制其起訴期間。四、依本條第一項、第二項規定，起訴狀原應於不變期間內向管轄之地方法院行政訴訟庭提出，惟考量目前交通聲明異議，係由受處分人將聲明異議狀提出於原處分機關，為免修法後因原處分機關未為告知或告知錯誤，致原告誤向原處分機關提出起訴狀，原處分機關復未能即時轉遞法院，而發生起訴逾期之不利益，爰參考德國財務法院法第四十七條第二項規定，於本條第三項明定因原處分機關未為告知或告知錯誤，致原告於裁決書送達三十日內誤向原處分機關遞送起訴狀者，視為已遵守起訴期間，並明定原處分機關應即將起訴狀移送管轄法院，以免影響原告之訴訟權益。
+
+* 237.4 地方法院行政訴訟庭收受前條起訴狀後，應將起訴狀繕本送達被告。被告收受起訴狀繕本後，應於二十日內重新審查原裁決是否合法妥當，並分別為如下之處置：一、原告提起撤銷之訴，被告認原裁決違法或不當者，應自行撤銷或變更原裁決。但不得為更不利益之處分。二、原告提起確認之訴，被告認原裁決無效或違法者，應為確認。三、原告合併提起給付之訴，被告認原告請求有理由者，應即返還。四、被告重新審查後，不依原告之請求處置者，應附具答辯狀，並將重新審查之紀錄及其他必要之關係文件，一併提出於管轄之地方法院行政訴訟庭。被告依前項第一款至第三款規定為處置者，應即陳報管轄之地方法院行政訴訟庭；被告於第一審終局裁判生效前已完全依原告之請求處置者，以其陳報管轄之地方法院行政訴訟庭時，視為原告撤回起訴。
+
+> 釋：一、本條新增。二、交通裁決事件雖因其質輕量多，為使法律關係及早確定而免除其訴願等前置程序，惟為促使原處分機關能自我省察原裁決是否合法妥當，以符「依法行政」之要求，並使民眾就行政處分是否合目的性能獲審查之機會，暨兼顧救濟程序之簡便，以保障當事人之權益（藉由被告即原處分機關答辯及調取相關卷證之程序，使被告應重新審查；而非要求原告須經訴願等前置程序始能起訴），爰創設「重新審查」之特別救濟機制，以取代訴願程序，於本條第一項明定法院應將起訴狀繕本送達原處分機關即被告，並於第二項明定被告收受起訴狀繕本後，應於二十日內重新審查原裁決是否合法妥當，並分別教示其如何處置。是以，「重新審查」係被告於原告起訴後依法應為之行為，仍屬訴訟程序之一部分，可以督促行政機關事前謹慎裁決、事後自我省察，達到疏減訟源、減輕民怨之功效。三、被告如於收受起訴狀繕本後自行撤銷或變更原裁決，或確認處分確為無效或違法，或已返還已繳納之罰鍰、已繳送之駕駛執照、計程車駕駛人執業登記證、汽車牌照者，應即陳報於管轄之地方法院行政訴訟庭，使法院得以知悉。如被告全部或一部不依原告請求處置者，則應提出答辯狀，並將重新審查之紀錄及其他必要關係文件，一併提出於管轄之法院。四、被告於重新審查後已完全依原告請求處置者，或被告於重新審查程序未完全依原告之請求處置，但於第一審終局裁判生效前已完全依原告請求處置者，因已無訴訟實益，爰於本條第三項明定以被告陳報管轄之地方法院行政訴訟庭時，視為原告撤回起訴。
+
+* 237.5 交通裁決事件，按下列規定徵收裁判費：一、起訴，按件徵收新臺幣三百元。二、上訴，按件徵收新臺幣七百五十元。三、抗告，徵收新臺幣三百元。四、再審之訴，按起訴法院之審級，依第一款、第二款徵收裁判費；對於確定之裁定聲請再審者，徵收新臺幣三百元。五、本法第九十八條之五各款聲請，徵收新臺幣三百元。依前條第三項規定，視為撤回起訴者，法院應依職權退還已繳之裁判費。
+
+> 釋：一、本條新增。二、交通裁決事件相較於其他行政訴訟事件而言，裁罰金額較低，如與其他行政訴訟簡易訴訟程序事件一樣起訴徵收裁判費新臺幣二千元、上訴徵收裁判費三千元、抗告徵收裁判費一千元，聲請假扣押案每件一千元，恐因此影響民眾訴訟救濟之意願，爰於本條第一項另定此類事件各項裁判費之徵收標準。又所謂「按件」，依目前行政訴訟實務，係按訴狀件數計算，例如以一起訴狀同時對三件裁決書表示不服，則於徵收裁判費時，僅以一件計算起訴裁判費。三、前條第三項視為原告撤回起訴之情形，因原裁決確有無效或違法不當或已為之執行欠缺法律上之原因，僅因被告機關自為處置而使訴訟無繼續之實益，乃立法明定視為撤回起訴，為求公平，故於本條第二項明定此時法院應依職權退還已繳之裁判費。
+
+* 237.6 因訴之變更、追加，致其訴之全部或一部，不屬於交通裁決事件之範圍者，地方法院行政訴訟庭應改依簡易訴訟程序審理；其應改依通常訴訟程序者，並應裁定移送管轄之高等行政法院。
+
+> 釋：一、本條新增。二、原告於地方法院行政訴訟庭第一審訴訟程序進行中，如有變更、追加之必要，且變更、追加後仍屬於交通裁決事件之範圍，基於訴訟經濟之考量，實無禁止之必要，惟若變更、追加後，致其訴之全部或一部，不屬於交通裁決事件之範圍者，其情形即與本章考量交通裁決事件內容較為單純、為期訴訟程序進行簡速而設有特殊規定之意旨不符，爰於本條明定此情形不得適用本章之規定，而應改依簡易訴訟程序審理；其應改依通常訴訟程序者，因通常訴訟程序係以高等行政法院為第一審管轄法院，爰明定並應以裁定移送管轄之高等行政法院。
+
+* 237.7 交通裁決事件之裁判，得不經言詞辯論為之。
+
+> 釋：一、本條新增。二、考量交通裁決事件質輕量多，且裁罰金額普遍不高，如卷內事證已臻明確，尚須通知兩造到庭辯論，無異增加當事人之訟累，爰於本條明定，其裁判得不經言詞辯論為之。
+
+* 237.8 行政法院為訴訟費用之裁判時，應確定其費用額。前項情形，行政法院得命當事人提出費用計算書及釋明費用額之文書。
+
+> 釋：一、本條新增。二、為免交通裁決事件之當事人於判決確定後另行聲請確定訴訟費用之勞費，爰參考民事訴訟法第四百三十六條之十九規定，明定本條。
+
+* 237.9 交通裁決事件，除本章別有規定外，準用簡易訴訟程序之規定。交通裁決事件之上訴，準用第二百三十五條、第二百三十五條之一、第二百三十六條之一、第二百三十六條之二第一項至第三項及第二百三十七條之八規定。交通裁決事件之抗告、再審及重新審理，分別準用第四編至第六編規定。
+
+> 釋：一、本條新增。二、第一項明定交通裁決事件第一審程序，除本章別有規定外，其審理準用簡易訴訟程序之規定。三、第二項明定簡易訴訟程序中關於上訴之規定即第二百三十五條、第二百三十五條之一、第二百三十六條之一、第二百三十六條之二第一項至第三項及本章第二百三十七條之八關於訴訟費用額之規定，於交通裁決事件之上訴程序均準用之。四、第三項明定交通裁決事件之抗告、再審及重新審理，分別準用第四編至第六編規定。
+
+* 238 對於高等行政法院之終局判決，除本法或其他法律別有規定外，得上訴於最高行政法院。於上訴審程序，不得為訴之變更、追加或提起反訴。
+
+> 釋：對於簡易訴訟程序事件、交通裁決事件，高等行政法院所為之判決，不得上訴於最高行政法院，本法第二百三十五條及第二百三十七條之九第二項準用第二百三十五條定有明文，爰修正本條除外規定。
 
 * 239 前條判決前之裁判，牽涉該判決者，並受最高行政法院之審判。但依本法不得聲明不服或得以抗告聲明不服者，不在此限。
 
@@ -648,17 +778,21 @@
 
 > 釋：為配合公文直式橫書格式，爰將第二項本文「左」列修正為「下」列。
 
-* 244 提起上訴，應以上訴狀表明下列各款事項，提出於原高等行政法院為之：一、當事人。二、高等行政法院判決，及對於該判決上訴之陳述。三、對於高等行政法院判決不服之程度，及應如何廢棄或變更之聲明。四、上訴理由。前項上訴狀內並應添具關於上訴理由之必要證據。對簡易訴訟事件之判決提起上訴，應於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解。
+* 244 提起上訴，應以上訴狀表明下列各款事項，提出於原高等行政法院為之：一、當事人。二、高等行政法院判決，及對於該判決上訴之陳述。三、對於高等行政法院判決不服之程度，及應如何廢棄或變更之聲明。四、上訴理由。前項上訴狀內並應添具關於上訴理由之必要證據。
 
-> 釋：為配合公文直式橫書格式，爰將第一項但書「左」列修正為「下」列。
+> 釋：對於簡易訴訟程序事件之判決上訴，其要件及上訴理由應表明事項，已分別明定於第二百三十五條第二項及第二百三十六條之一，爰刪除本條第三項規定。
 
 * 245 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內提出理由書於原高等行政法院；未提出者，毋庸命其補正，由原高等行政法院以裁定駁回之。判決宣示或公告後送達前提起上訴者，前項期間應自判決送達後起算。
 
-* 246 上訴不合法而其情形不能補正者，原高等行政法院應以裁定駁回之。上訴不合法而其情形可以補正者，原高等行政法院應定期間命其補正；如不於期間內補正，原高等行政法院應以裁定駁回之。對簡易訴訟事件之判決提起上訴，未於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解者，適用前項之規定。
+* 246 上訴不合法而其情形不能補正者，原高等行政法院應以裁定駁回之。上訴不合法而其情形可以補正者，原高等行政法院應定期間命其補正；如不於期間內補正，原高等行政法院應以裁定駁回之。
+
+> 釋：依第二百三十五條第二項規定，簡易訴訟程序上訴已改為以判決違背法令為要件，並無庸具體表明該訴訟事件所涉及之原則性法律見解，爰刪除本條第三項規定。
 
 * 247 上訴未經依前條規定駁回者，高等行政法院應速將上訴狀送達被上訴人。被上訴人得於上訴狀或第二百四十五條第一項理由書送達後十五日內，提出答辯狀於原高等行政法院。高等行政法院送交訴訟卷宗於最高行政法院，應於收到答辯狀或前項期間已滿，及各當事人之上訴期間已滿後為之。前項應送交之卷宗，如為高等行政法院所需者，應自備繕本、影本或節本。
 
-* 248 被上訴人在最高行政法院未判決前得提出答辯狀及其追加書狀於最高行政法院，上訴人亦得提出上訴理由追加書狀。最高行政法院以認為有必要時為限，得將前項書狀送達於他造。
+* 248 被上訴人在最高行政法院未判決前得提出答辯狀及其追加書狀於最高行政法院，上訴人亦得提出上訴理由追加書狀。最高行政法院認有必要時，得將前項書狀送達於他造。
+
+> 釋：文字酌作修正。
 
 * 249 上訴不合法者，最高行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正。上訴不合法之情形，已經原高等行政法院命其補正而未補正者，得不行前項但書之程序。
 
@@ -666,7 +800,9 @@
 
 * 251 最高行政法院應於上訴聲明之範圍內調查之。最高行政法院調查高等行政法院判決有無違背法令，不受上訴理由之拘束。
 
-* 252 最高行政法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，得以裁定停止訴訟程序，聲請大法官解釋。
+* 252 （刪除）
+
+> 釋：一、本條刪除。二、本次修正已增訂第一百七十八條之一：「行政法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，得聲請司法院大法官解釋。前項情形，行政法院應裁定停止訴訟程序。」此規定於上訴審程序亦準用之（本法第二百六十三條參照），爰刪除本條規定。
 
 * 253 最高行政法院之判決不經言詞辯論為之。但有下列情形之一者，得依職權或依聲請行言詞辯論：一、法律關係複雜或法律見解紛歧，有以言詞辯明之必要。二、涉及專門知識或特殊經驗法則，有以言詞說明之必要。三、涉及公益或影響當事人權利義務重大，有行言詞辯論之必要。言詞辯論應於上訴聲明之範圍內為之。
 
@@ -677,6 +813,10 @@
 * 255 最高行政法院認上訴為無理由者，應為駁回之判決。原判決依其理由雖屬不當，而依其他理由認為正當者，應以上訴為無理由。
 
 * 256 最高行政法院認上訴為有理由者，就該部分應廢棄原判決。因違背訴訟程序之規定廢棄原判決者，其違背之訴訟程序部分，視為亦經廢棄。
+
+* 256.1 應適用簡易訴訟程序或交通裁決訴訟程序之事件，最高行政法院不得以高等行政法院行通常訴訟程序而廢棄原判決。前項情形，應適用簡易訴訟或交通裁決訴訟上訴審程序之規定。
+
+> 釋：一、本條新增。二、對於簡易訴訟程序或交通裁決事件訴訟程序之第一審判決提起上訴，其上訴審管轄法院原應為高等行政法院，因第一審高等行政法院誤行通常訴訟程序所為之判決，當事人對之提起上訴，致由最高行政法院受理其上訴。然高等行政法院誤行第一審通常訴訟程序，較諸應行之簡易訴訟程序或交通裁決事件訴訟程序嚴謹周密，對於當事人之程序保障並無欠缺，故受理其上訴之最高行政法院殊無將第一審判決廢棄發交地方法院行政訴訟庭更為審理之必要，以免增加當事人及法院不必要之勞費。爰參考民事訴訟法第四百五十一條之一第一項規定，於本條第一項明文規定受理其上訴之最高行政法院不得以此誤行程序而廢棄原判決。三、高等行政法院雖將簡易訴訟程序事件或交通裁決事件誤為通常訴訟程序事件，而依通常訴訟程序審理，並不因此改變其為簡易訴訟程序事件或交通裁決事件之性質，故受理其上訴之最高行政法院仍應適用簡易訴訟程序事件或交通裁決事件上訴審程序之規定而審理，爰參考民事訴訟法第四百五十一條之一第二項規定，增訂本條第二項。至最高行政法院審理後，如發現原判決有應廢棄發交之必要，廢棄後應發交管轄之地方法院行政訴訟庭依簡易訴訟程序或交通裁決事件訴訟程序審理，以符簡易訴訟制度或交通裁決訴訟制度之立法旨趣，自不待言。
 
 * 257 最高行政法院不得以高等行政法院無管轄權而廢棄原判決。但違背專屬管轄之規定者，不在此限。因高等行政法院無管轄權而廢棄原判決者，應以判決將該事件移送於管轄行政法院。
 
@@ -700,11 +840,15 @@
 
 * 266 受命法官或受託法官之裁定，不得抗告。但其裁定如係受訴行政法院所為而依法得為抗告者，得向受訴行政法院提出異議。前項異議，準用對於行政法院同種裁定抗告之規定。受訴行政法院就異議所為之裁定，得依本編之規定抗告。繫屬於最高行政法院之事件，受命法官、受託法官所為之裁定，得向受訴行政法院提出異議。其不得上訴最高行政法院之事件，高等行政法院受命法官、受託法官所為之裁定，亦同。
 
-* 267 抗告，由最高行政法院裁定。
+* 267 抗告，由直接上級行政法院裁定。對於抗告法院之裁定，不得再為抗告。
+
+> 釋：一、行政訴訟將改採三級二審制，在地方法院設置行政訴訟庭，爰修正本條第一項規定，抗告由直接上級行政法院裁定。二、並於第二項明定對於抗告法院之裁定，不得再為抗告。
 
 * 268 提起抗告，應於裁定送達後十日之不變期間內為之。但送達前之抗告亦有效力。
 
-* 269 提起抗告，應向為裁定之原高等行政法院或原審判長所屬高等行政法院提出抗告狀為之。高等行政法院適用簡易訴訟程序之事件或關於訴訟救助提起抗告，及由證人、鑑定人或執有證物之第三人提起抗告者，得以言詞為之。
+* 269 提起抗告，應向為裁定之原行政法院或原審判長所屬行政法院提出抗告狀為之。關於訴訟救助提起抗告，及由證人、鑑定人或執有證物之第三人提起抗告者，得以言詞為之。
+
+> 釋：一、配合地方法院行政訴訟庭之設置，將第一項高等行政法院文字，修正為行政法院。二、關於簡易訴訟程序事件之抗告，依本法第二百三十五條第二項規定，非以原裁判違背法令為理由不得為之，並不適合以言詞提起抗告，爰刪除適用簡易訴訟程序之事件得以言詞抗告之規定。
 
 * 270 關於捨棄上訴權及撤回上訴之規定，於抗告準用之。
 
@@ -724,7 +868,9 @@
 
 > 釋：一、本條新增。二、按行政訴訟之當事人，對於行政法院所為裁定，聲請再審，經駁回後，不得復以同一原因，又對該駁回再審聲請之裁定更行聲請再審，固經最高行政法院四十六年裁字第四十一號著有判例，惟當事人對於原確定判決提起再審之訴，經行政法院認無再審理由，判決駁回確定後，依現行規定，並未限制當事人對此駁回再審之訴之確定判決不得提起再審之訴，為避免當事人一再以同一事由提起再審之訴，致浪費行政法院資源，爰參照民事訴訟法第四百九十八條之一之規定，增訂本條規定。
 
-* 275 再審之訴專屬為判決之原行政法院管轄。對於審級不同之行政法院就同一事件所為之判決提起再審之訴者，由最高行政法院合併管轄之。對於最高行政法院之判決，本於第二百七十三條第一項第九款至第十四款事由聲明不服者，雖有前二項之情形，仍專屬原高等行政法院管轄。
+* 275 再審之訴專屬為判決之原行政法院管轄。對於審級不同之行政法院就同一事件所為之判決提起再審之訴者，專屬上級行政法院合併管轄之。對於最高行政法院之判決，本於第二百七十三條第一項第九款至第十四款事由聲明不服者，雖有前二項之情形，仍專屬原高等行政法院管轄。
+
+> 釋：再審之訴得同時對於審級不同之法院就同一事件所為之確定終局判決提起，惟既係同一事件，不宜由各級法院分別審判，而應由上級法院合併管轄，原條文第二項即表明斯旨。惟考量我國行政訴訟原僅有高等行政法院、最高行政法院二級，故原第二項不稱為上級行政法院而直接表明係最高行政法院，然本次修正後改為三級二審制，為免適用上產生疑義，爰參考民事訴訟法第四百九十九條規定，修正本條第二項文字。
 
 * 276 再審之訴應於三十日之不變期間內提起。前項期間自判決確定時起算，判決於送達前確定者，自送達時起算；其再審之理由發生或知悉在後者，均自知悉時起算。依第二百七十三條第二項提起再審之訴者，第一項期間自解釋公布當日起算。再審之訴自判決確定時起，如已逾五年者，不得提起。但以第二百七十三條第一項第五款、第六款或第十二款情形為再審之理由者，不在此限。對於再審確定判決不服，復提起再審之訴者，前項所定期間，自原判決確定時起算。但再審之訴有理由者，自該再審判決確定時起算。
 
@@ -768,7 +914,9 @@
 
 * 293 為保全公法上金錢給付之強制執行，得聲請假扣押。前項聲請，就未到履行期之給付，亦得為之。
 
-* 294 假扣押之聲請，由管轄本案之高等行政法院或假扣押標的所在地之高等行政法院管轄。管轄本案之高等行政法院為訴訟已繫屬或應繫屬之高等行政法院。假扣押之標的如係債權，以債務人住所或擔保之標的所在地，為假扣押標的所在地。
+* 294 假扣押之聲請，由管轄本案之行政法院或假扣押標的所在地之地方法院行政訴訟庭管轄。管轄本案之行政法院為訴訟已繫屬或應繫屬之第一審法院。假扣押之標的如係債權，以債務人住所或擔保之標的所在地，為假扣押標的所在地。
+
+> 釋：依最新制，管轄本案之第一審法院可能為地方法院行政訴訟庭，亦可能為高等行政法院，爰配合第三條之一規定，修正本條規定。又於以假扣押標的所在地法院為管轄法院時，為求執行便利，爰明定由標的所在地之最下級法院即地方法院行政訴訟庭管轄。
 
 * 295 假扣押裁定後，尚未提起給付之訴者，應於裁定送達十日內提起；逾期未起訴者，行政法院應依聲請撤銷假扣押裁定。
 
@@ -778,9 +926,13 @@
 
 * 298 公法上之權利因現狀變更，有不能實現或甚難實現之虞者，為保全強制執行，得聲請假處分。於爭執之公法上法律關係，為防止發生重大之損害或避免急迫之危險而有必要時，得聲請為定暫時狀態之處分。前項處分，得命先為一定之給付。行政法院為假處分裁定前，得訊問當事人、關係人或為其他必要之調查。
 
-* 299 關於行政機關之行政處分，不得為前條之假處分。
+* 299 得依第一百十六條請求停止原處分或決定之執行者，不得聲請為前條之假處分。
 
-* 300 假處分之聲請，由管轄本案之高等行政法院管轄。但有急迫情形時，得由請求標的所在地之高等行政法院管轄。
+> 釋：本條規定之意旨在於得依第一百十六條請求停止原處分或決定之執行者，不得聲請為前條之假處分。原法條文字易遭誤會為凡有關行政處分者，均不得為假處分，爰修正使之明確。
+
+* 300 假處分之聲請，由管轄本案之行政法院管轄。但有急迫情形時，得由請求標的所在地之地方法院行政訴訟庭管轄。
+
+> 釋：依最新制，管轄本案之第一審法院可能為地方法院行政訴訟庭，亦可能為高等行政法院，爰配合第三條之一規定，修正本條規定。又有急迫情形時而由標的所在地法院為假處分管轄法院時，為求執行便利，爰明定由標的所在地之最下級法院即地方法院行政訴訟庭管轄。
 
 * 301 關於假處分之請求及原因，非有特別情事，不得命供擔保以代釋明。
 
@@ -790,11 +942,17 @@
 
 * 304 撤銷判決確定者，關係機關應即為實現判決內容之必要處置。
 
-* 305 行政訴訟之裁判命債務人為一定之給付，經裁判確定後，債務人不為給付者，債權人得以之為執行名義，聲請高等行政法院強制執行。高等行政法院應先定相當期間通知債務人履行；逾期不履行者，強制執行。債務人為中央或地方機關或其他公法人者，並應通知其上級機關督促其如期履行。依本法成立之和解，及其他依本法所為之裁定得為強制執行者，或科處罰鍰之裁定，均得為執行名義。
+* 305 行政訴訟之裁判命債務人為一定之給付，經裁判確定後，債務人不為給付者，債權人得以之為執行名義，聲請地方法院行政訴訟庭強制執行。地方法院行政訴訟庭應先定相當期間通知債務人履行；逾期不履行者，強制執行。債務人為中央或地方機關或其他公法人者，並應通知其上級機關督促其如期履行。依本法成立之和解，及其他依本法所為之裁定得為強制執行者，或科處罰鍰之裁定，均得為執行名義。
 
-* 306 高等行政法院為辦理強制執行事務，得設執行處，或囑託普通法院民事執行處或行政機關代為執行。執行程序，除本法別有規定外，應視執行機關為法院或行政機關而分別準用強制執行法或行政執行法之規定。債務人對第一項囑託代為執行之執行名義有異議者，由高等行政法院裁定之。
+> 釋：強制執行事件宜由最下級之法院處理，爰修正本條規定，於地方法院設置行政訴訟庭後，將強制執行事件交由地方法院行政訴訟庭受理。
 
-* 307 債務人異議之訴，由高等行政法院受理；其餘有關強制執行之訴訟，由普通法院受理。
+* 306 地方法院行政訴訟庭為辦理行政訴訟強制執行事務，得囑託民事執行處或行政機關代為執行。執行程序，除本法別有規定外，應視執行機關為法院或行政機關而分別準用強制執行法或行政執行法之規定。債務人對第一項囑託代為執行之執行名義有異議者，由地方法院行政訴訟庭裁定之。
+
+> 釋：一、徵諸實際，目前行政訴訟強制執行事務，係囑託普通法院民事執行處或行政機關代為執行。行政訴訟改為三級二審制之後，行政訴訟強制執行事務，依前條規定雖係由地方法院行政訴訟庭辦理，為免行政訴訟庭另設專人辦理行政訴訟強制執行，致耗費人力、物力，爰於本條第一項明定地方法院行政訴訟庭得將行政訴訟強制執行事務，囑託民事執行處或行政機關代為執行。二、依第三百零五條第一項規定，行政訴訟強制執行事務既改由地方法院行政訴訟庭辦理，對囑託代為執行之執行名義有異議者，自宜由地方法院行政訴訟庭裁定，爰修正第二項規定。
+
+* 307 債務人異議之訴，依其執行名義係適用簡易訴訟程序或通常訴訟程序，分別由地方法院行政訴訟庭或高等行政法院受理；其餘有關強制執行之訴訟，由普通法院受理。
+
+> 釋：債務人異議之訴係對於執行名義所示之實體請求權有所爭執，此項公法上權利義務之爭執，自應由行政法院受理。惟地方法院設置行政訴訟庭後，債務人異議之訴，究竟應由地方法院行政訴訟庭受理，抑或由高等行政法院受理？恐生爭執。為求程序明確，爰於本條明定，債務人異議之訴，依其執行名義係適用簡易訴訟程序或通常訴訟程序，分別由地方法院行政訴訟庭或高等行政法院受理，亦即，原執行名義係適用簡易訴訟程序之判決者，債務人異議之訴即由地方法院行政訴訟庭依簡易訴訟程序審理；原執行名義係適用通常訴訟程序之判決者，債務人異議之訴即由高等行政法院依通常訴訟程序審理。
 
 * 307.1 民事訴訟法之規定，除本法已規定準用者外，與行政訴訟性質不相牴觸者，亦準用之。
 
